--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>First we are going to start we oreo cupcakes. They are my favorite type of cupcake. Here is a picture of a orep cupcake</p>
+     <img src ="http://i601.photobucket.com/albums/tt91/bigbearswife/Blog%20Photos/Blog%20Photos%202/wbeMM61_zpsedb300d2.jpg"
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
