--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@ $ git checkout gh-pages
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Hey people, this is a website about cupcakes, crazy cupcakes. I am going to talk about all differrent types of cupcakes and show you pictures of them.</p>
 
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
+<p>The first type of cupcake we ae going to talk about is the oreo cupcakes. They are my favorite type of cupcake because I love oreos and cupcaks so they are a great combenation.Here is a picture of one. </p>
+         <img src="http://i601.photobucket.com/albums/tt91/bigbearswife/Blog%20Photos/Blog%20Photos%202/wbeMM61_zpsedb300d2.jpg"
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
