--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Crazy-cupcakes</h1>
+  <font color"purple"> <h1 class="project-name">Crazy-cupcakes</h1></font>    
       <h2 class="project-tagline">cupcakes are so crazy</h2>
       <a href="https://github.com/bacona/crazy-cupcakes" class="btn">View on GitHub</a>
       <a href="https://github.com/bacona/crazy-cupcakes/zipball/master" class="btn">Download .zip</a>
