--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ $ git checkout gh-pages
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>The thrid cupcake is a regular plain vanilla cupcake. It is old fanshion and good.</p>
+    <img src="http://cdn.playbuzz.com/cdn/4814927a-01e8-4f1e-8ef8-5735181b9fd3/1d145aa1-38b2-4d78-8d98-26557a7404cf.jpg"
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/bacona/crazy-cupcakes">Crazy-cupcakes</a> is maintained by <a href="https://github.com/bacona">bacona</a>.</span>
