--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@ $ git checkout gh-pages
 
     </section>
 
-  
+ <a href="http://cdn.playbuzz.com/cdn/4814927a-01e8-4f1e-8ef8-5735181b9fd3/1d145aa1-38b2-4d78-8d98-26557a7404cf.jpg"</a> 
   </body>
 </html>
-
